# SCrystalStoneRPG

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
source/: CMakeLists.txt  console.cpp  console.h  constants.h  cpp.hint  game.cpp  game.h  main.cpp  scenes.cpp  scenes.h
source/include/: termcolor.hpp
